[metadata]
name = float-evaluation
version = 0.0.1
author = Johannes Haug
author_email = johannes-christian.haug@uni-tuebingen.de
description = A modular Python framework for standardised evaluation and benchmarking of online learning models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/haugjo/float
project_urls =
    Documentation = https://haugjo.github.io/float/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy >= 1.22.1
    scikit-learn >= 1.0.2
    tabulate >= 0.8.5
    matplotlib >= 3.4.2
    scipy >= 1.7.3
    pandas >= 1.4.0
    river >= 0.9.0
    scikit-multiflow >= 0.5.3